test/data/resolver/valid/set_entity_replace_map.cypher
MATCH (n:Person) SET n = {name: 'x'} RETURN n
