test/data/resolver/invalid/set_entity_on_projection_alias.cypher
MATCH (n:Person) WITH count(n) AS c SET c = {}
